--- a/run/conf/callbacks/early_stopping.yaml
+++ b/run/conf/callbacks/early_stopping.yaml
@@ -1,6 +1,6 @@
 # 以降はTrainerのコールバック関数のパラメータ
 # https://lightning.ai/docs/pytorch/stable/api/lightning.pytorch.callbacks.EarlyStopping.html#lightning.pytorch.callbacks.EarlyStopping
 early_stopping:
-  monitor: val_loss
-  mode: min
+  monitor: ~
+  mode: ~
   patience: 5
